update some in cars

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav id="navbar">
         <a href="#"><img src="./assets/signature.png" alt="Signature"></a>
         <ul>
-            <li><a href="./about-us.html">About Us</a></li>
-            <li><a href="./cars.html">Cars</a></li>
-            <li><a href="./help.html">Help</a></li>
+            <li><a id="nav-menu" href="./about-us.html">About Us</a></li>
+            <li><a id="nav-menu" href="./cars.html">Cars</a></li>
+            <li><a id="nav-menu" href="./help.html">Help</a></li>
         </ul>
     </nav>
 
@@ -28,7 +28,7 @@
     
         <div class="container">
             <div class="card">
-                <img src="./assets/porscher/718-cayman-style-edition.png" alt="Porscher 718 Cayman Style Edition" width="60%">
+                <img src="./assets/porsche/718-cayman-style-edition.png" alt="Porscher 718 Cayman Style Edition">
                 <h3>Porscher 718 Cayman Style Edition</h3>
                 <p>Giá: X tỷ</p>
             </div>
@@ -46,10 +46,6 @@
             <img src="./assets/logo/nissan.png" alt="Nissan" width="60%">
         </div>
     </div>
-
-    <footer>
-        <p>Copyright © 2025 Phung Luu Hoang Long. All rights reserved.</p>
-    </footer>
 
 </body>
 </html>
