--- a/cars.html
+++ b/cars.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/cars.css">
     <title>Cars Show</title>
 </head>
 <body>
     <nav id="navbar">
         <a href="./index.html"><img src="./assets/signature.png" alt="Signature"></a>
         <ul>
-            <li><a href="./about-us.html">About Us</a></li>
-            <li><a href="#">Cars</a></li>
-            <li><a href="./help.html">Help</a></li>
+            <li><a id="nav-menu" href="./about-us.html">About Us</a></li>
+            <li><a id="nav-menu" href="#">Cars</a></li>
+            <li><a id="nav-menu" href="./help.html">Help</a></li>
         </ul>
     </nav>
-    <footer>
-        <p>Copyright © 2025 Phung Luu Hoang Long. All rights reserved.</p>
-    </footer>
+
+    <div>
+        <ul class="cars">
+            <li><a href="#">Maybach</a></li>
+            <li><a href="#">Audi</a></li>
+            <li><a href="#">BMW</a></li>
+            <li><a href="#">Porsche</a></li>
+            <li><a href="#">Mercedes</a></li>
+            <li><a href="#">Lexus</a></li>
+            <li><a href="#">Nissan</a></li>
+        </ul>
+    </div>
+
+    <div class="types">
+
+    </div>
+    <script src="./js/cars.js"></script>
 </body>
 </html>
