--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
 
     <div class="logo-container">
         <div class="logo">
-            <img src="./assets/logo/maybach.png" alt="Maybach" width="60%">
-            <img src="./assets/logo/audi.png" alt="Audi" width="60%">
-            <img src="./assets/logo/bmw.png" alt="BMW" width="60%">
-            <img src="./assets/logo/porsche.png" alt="Porsche" width="60%">
-            <img src="./assets/logo/mercedes.png" alt="Mercedes" width="60%">
-            <img src="./assets/logo/lexus.png" alt="Lexus" width="60%">
-            <img src="./assets/logo/nissan.png" alt="Nissan" width="60%">
+            <img src="./assets/logo/maybach.png" alt="Maybach">
+            <img src="./assets/logo/audi.png" alt="Audi">
+            <img src="./assets/logo/bmw.png" alt="BMW">
+            <img src="./assets/logo/porsche.png" alt="Porsche">
+            <img src="./assets/logo/mercedes.png" alt="Mercedes">
+            <img src="./assets/logo/lexus.png" alt="Lexus">
+            <img src="./assets/logo/nissan.png" alt="Nissan">
         </div>
     </div>
 
